'Code written by Lucas Mouette'

@startuml
skin rose

class TravelPlan {

    - travel_name: string
    - travel_duration: TravelDuration
    - destination_country: DestinationCountry 
    - assigned_tour_guide: Tourguide

    + get name(): string
    + get duration(): TravelDuration
    + get country(): DestinationCountry
    + get assigned_tour_guide(): TourGuide
    + set name(name: string): void
    + set country(country: DestinationCountry): void
    + set assigned_tour_guide(tour_guide: TourGuide): void
}
'removeDaysAllocated je nachdem ändern wenn die getter/setter zusammen geschrieben werden'
class TravelDuration {

    - total_days: number
    - days_allocated: number

    + get total_days(): number
    + get days_allocated(): number
    + get remaining_days(): number  
    + set total_days(total_days: number): void
    + update(country: DestinationCountry): void
}

class DestinationCountry {

    - name: string
    - cities: City[]

    + get name(): string
    + get cities(): City[]
    + addCity(city: City[]): void
    + removeCity(city: string): void
}

class City {

    - name: string
    - stay_duration: number

    + get name(): string
    + get days(): duration_of_stay
    + set days(new_duration_of_stay: number): void
}


class TourGuide {

    - guide_name: string
    - spoken_languages: string[]

    + get name(): string
    + get spoken_languages(): string[]
}

TravelPlan "1" o-- "1" DestinationCountry
TravelPlan "1" --> "1" TourGuide
TravelPlan "1" *-- "1" TravelDuration
DestinationCountry "1" *-- "1...n" City

@enduml